--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,56 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # Checkout do código
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
+      # NodeJS (exigido pelo Capacitor)
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
 
-      - name: Install deps
+      # Instalar dependências
+      - name: Install dependencies
         run: npm install
 
-      - name: Build web
+      # Build do front-end (Vite / React)
+      - name: Build web app
         run: npm run build
 
+      # Java para Android / Gradle
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 17
 
-      - name: Add Android
+      # Adicionar Android (se não existir)
+      - name: Add Android platform
         run: npx cap add android || true
 
-      - name: Sync Capacitor
+      # Sincronizar Capacitor
+      - name: Capacitor sync
         run: npx cap sync android
 
+      # Build do APK (debug)
       - name: Build APK
         run: |
           cd android
+          chmod +x ./gradlew
           ./gradlew assembleDebug
 
+      # Upload do APK como artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
