--- a/android-config/AndroidManifest.xml
+++ b/android-config/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <!-- AdMob App ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6111888174936788~XXXXXXXXXX"/>
+            android:value="ca-app-pub-6111888174936788~3299172981"/>
             
         <!-- Desabilita verificação de inicialização do AdMob -->
         <meta-data
