--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "app.lovable.ed2909e2c06b4cee8f59885dead9ee95",
+  "appId": "ca-app-pub-6111888174936788~3299172981",
   "appName": "CogNext",
   "webDir": "dist",
   "android": {
@@ -9,7 +9,7 @@
   },
   "plugins": {
     "AdMob": {
-      "appId": "ca-app-pub-6111888174936788~XXXXXXXXXX",
+      "appId": "ca-app-pub-6111888174936788~3299172981",
       "bannerAdId": "ca-app-pub-6111888174936788/1063536663",
       "interstitialAdId": "ca-app-pub-6111888174936788/9038584824"
     }
