Fix JSON formatting in capacitor.config.json
Fix all

Signed-off-by: Marta Reinhardt  <martinhareinhardt@gmail.com>

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,4 @@
-{
-  "appId": "ca-app-pub-6111888174936788~3299172981",
+{ "appId": "ca-app-pub-6111888174936788~3299172981",
   "appName": "CogNext",
   "webDir": "dist",
   "android": {
