--- a/.github/workflows/android-twa.yml
+++ b/.github/workflows/android-twa.yml
@@ -8,28 +8,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Setup Java
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Install Bubblewrap
+      - name: Expose JAVA_HOME for Bubblewrap
+        run: echo "BUBBLEWRAP_JDK=$JAVA_HOME" >> $GITHUB_ENV
+
+      - name: Install Bubblewrap CLI
         run: npm install -g @bubblewrap/cli
 
-      - name: Init TWA
+      - name: Init TWA (non-interactive)
         run: |
           bubblewrap init \
             --manifest=https://cog-next-3h6w.vercel.app/manifest.json \
             --directory=twa \
+            --jdkPath=$JAVA_HOME \
             --yes
 
       - name: Build APK
@@ -37,7 +41,7 @@ jobs:
           cd twa
           bubblewrap build
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
